--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.1.0",
     "eslint-config-prettier": "^8.5.0",
@@ -66,9 +67,11 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
     "prettier": "^2.7.1",
     "prisma": "^4.7.1",
     "start-server-and-test": "^1.12.0",
+    "tailwindcss": "^3.2.4",
     "tsx": "^3.9.0",
     "typescript": "^4.8.3",
     "vite": "^3.1.3",
