--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.2",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.7.1",
     "start-server-and-test": "^1.12.0",
     "tailwindcss": "^3.2.4",
