--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@trpc/server": "^10.7.0",
     "clsx": "^1.1.1",
     "next": "^13.0.0",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "superjson": "^1.7.4",
