--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "@prisma/client": "^4.7.1",
     "@tanstack/react-query": "^4.3.8",
     "@trpc/client": "^10.7.0",
