--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@prisma/client": "^4.7.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.3.8",
     "@trpc/client": "^10.7.0",
     "@trpc/next": "^10.7.0",
